--- a/udemy_lecture/rrts/package.json
+++ b/udemy_lecture/rrts/package.json
@@ -9,6 +9,7 @@
     "@types/jest": "^24.0.0",
     "@types/node": "^12.0.0",
     "@types/react-redux": "^7.1.7",
+    "@typescript-eslint/parser": "^2.30.1-alpha.0",
     "axios": "^0.19.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -16,7 +17,7 @@
     "react-scripts": "3.4.1",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
-    "typescript": "~3.7.2"
+    "typescript": "^3.8.3"
   },
   "scripts": {
     "start": "react-scripts start",
